removed extra padding and fixed navbar

--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,7 @@ header .intro-text .skills {
   }
 }
 section {
-  padding: 110px 0;
+  /*padding: 110px 0;*/
   display: block;
 }
 section h2 {
@@ -192,6 +192,7 @@ section h2 {
 section.success {
   /*background: linear-gradient(rebeccapurple, #7c23a1);*/
   color: purple;
+  margin-top: -20px;
 }
 @media (max-width: 767px) {
   section {
